# arrigation_system

./: CMakeLists.txt  README.md  package-lock.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  file_logger.c  file_logger.h  idf_component.yml  lv_font_montserrat_14.c  main.c  psram_font.ld  sdkconfig
main/GUI/fonts/: my_arial24.c  my_arial24.h
main/GUI/ui/: ui.c  ui.h  ui1.h  ui_pomodoro.c  ui_pomodoro.h
main/GUI/wallpaper/: greenhouse.c  wallpaper800400.c  wallpaper800400.h
main/main/: file_logger.h
main/main/GUI/ui/: ui1.c  ui_cucumber.c  ui_cucumber.h  ui_pomodoro.c
main/main/settings/display/: backlight_manager.c  display_init.c
main/main/settings/time/: rtc_time.h
main/main/settings/wifi/: tcp_server.c  tcp_server.h  wifi_sta.h
main/settings/display/: backlight_ch422g.c  backlight_ch422g.h  display_init.c  display_init.h
main/settings/time/: rtc_time.c  rtc_time.h  time_from_build.c  time_from_build.h
main/settings/touch/: touch.c  touch.h
main/settings/wifi/: ntp_client.c  ntp_client.h  tcp_server.c  tcp_server.h  wifi_ap.c  wifi_ap.h  wifi_sta.c
